language/move-lang/tests/move_check/parser/missing_angle_brace_close.exp
error: 

   ┌── tests/move_check/parser/missing_angle_brace_close.move:3:18 ───
   │
 3 │         let x = t<u64;
   │                  - Perhaps you need a blank space before this '<' operator?
   │                  - To match this '<'
   │                      ^ Expected '>'
   │

